--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "grunt-karma": "~0.7.2",
     "grunt-ngmin": "0.0.3",
     "grunt-conventional-changelog": "~1.0.0",
-    "grunt-bump": "0.0.13"
-    
+    "grunt-bump": "0.0.13",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-open": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
