responder rules follow same pattern as widths

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bugs": "",
   "repository": {
     "type": "git",
-    "url": "git@"
+    "url": "git:"
   },
   "dependencies": {},
   "devDependencies": {
